public/nopbai/Logs/Contest01/[ok][57147][IA1401][ce140237][A].cpp.log
Compile error
A.cpp: In function 'int main()':
A.cpp:7:31: error: expected ';' before 'int'
  freopen("A.out", "w", stdout)
                               ^
                               ;
  int test;
  ~~~                           
A.cpp:9:9: error: 'test' was not declared in this scope
  cin >> test;
         ^~~~
A.cpp:9:9: note: suggested alternative: 'tzset'
  cin >> test;
         ^~~~
         tzset
